--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jin-Zhao Teh</title>
   </head>
   <body>
-    
+    <header>
+        Jin-Zhao Teh
+    </header>
   </body>
 </html>
