--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jin-Zhao Teh</title>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div id="background">
+        <picture>
+            <source>
+            <img src="Images/Img1.webp">
+        </picture>
+    </div>
     <header>
         Jin-Zhao Teh
     </header>
