--- a/index.html
+++ b/index.html
@@ -9,18 +9,14 @@
   <body>
     <div id="slider">
       <div class="slide" id="hero-page-w1">
-        <div id="background">
-          <picture>
-            <img src="Images/Img1.webp" alt="Background Image 1" />
-          </picture>
+        <div class="hero-background">
+          <img src="Images/Img1.webp" alt="Background Image 1" />
         </div>
         <header>Jin-Zhao Teh</header>
       </div>
       <div class="slide" id="hero-page-w2">
-        <div id="background">
-          <picture>
-            <img src="Images/Img1.webp" alt="Background Image 2" />
-          </picture>
+        <div class="hero-background">
+          <img src="Images/Img1.webp" alt="Background Image 2" />
         </div>
         <header>Another Page</header>
       </div>
