--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <div class="hero-background">
           <img src="Images/Img1.webp" alt="Background Image 1" />
         </div>
-        <header>Jin-Zhao Teh</header>
+        <header id="Hero-text1">Assessments</header>
       </div>
       <div class="slide" id="hero-page-w2">
         <div class="hero-background">
           <img src="Images/Img1.webp" alt="Background Image 2" />
         </div>
-        <header>Another Page</header>
+        <header>Another</header>
       </div>
       <!-- Add more slides here -->
     </div>
@@ -35,5 +35,6 @@
       </svg>
     </button>
     <script src="js/hero-page-transition.js"></script>
+    <script src="js/links.js"></script>
   </body>
 </html>
