--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         <div class="hero-background">
           <img src="Images/Img1.webp" alt="Background Image 2" />
         </div>
-        <header>Another</header>
+        <header>Resources</header>
       </div>
       <!-- Add more slides here -->
     </div>
-    <button id="prev">
+    <button id="prev", class="Hero-bttn">
       <svg viewBox="0 0 24 24" class="icon">
         <line x1="5" y1="12" x2="19" y2="12" stroke="white" stroke-width="2" />
         <line x1="12" y1="5" x2="12" y2="19" stroke="white" stroke-width="2" />
       </svg>
     </button>
-    <button id="next">
+    <button id="next", class="Hero-bttn">
       <svg viewBox="0 0 24 24" class="icon">
         <line x1="5" y1="12" x2="19" y2="12" stroke="white" stroke-width="2" />
         <line x1="12" y1="5" x2="12" y2="19" stroke="white" stroke-width="2" />
