--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
   </head>
   <body>
     <div id="slider">
-      <div class="slide" id="hero-page-w1">
+      <div class="slideX" id="hero-page-w1">
         <div class="hero-background">
           <img src="Images/Img1.webp" alt="Background Image 1" />
         </div>
-        <header id="Hero-text1">Assessments</header>
+        <header class="Hero-text">My Work</header>
       </div>
-      <div class="slide" id="hero-page-w2">
+      <div class="slideX" id="hero-page-w2">
         <div class="hero-background">
           <img src="Images/Img1.webp" alt="Background Image 2" />
         </div>
-        <header>Resources</header>
+        <header class="Hero-text">About Me</header>
+      </div>
+      <div class="slideY" id="hero-page-w2">
+        <div class="hero-background">
+          <img src="Images/Img1.webp" alt="Background Image 2" />
+        </div>
+        <header class="Hero-text">About Me</header>
       </div>
       <!-- Add more slides here -->
     </div>
