--- a/IjPlus/Login/index.html
+++ b/IjPlus/Login/index.html
@@ -18,8 +18,8 @@
 <div id="output">Please sign in.</div>
 
 <script>
-  const GITHUB_USERS_JSON_URL = "https://raw.githubusercontent.com/YOUR_USERNAME/YOUR_REPO/main/users.json";
-  const CLIENT_ID = "YOUR_CLIENT_ID";
+  const GITHUB_USERS_JSON_URL = "https://raw.githubusercontent.com/jin-zhao-teh/jin-zhao-teh.github.io/refs/heads/main/IjPlus/Data/Data.json";
+  const CLIENT_ID = "246843546913-ipt4k83gtha69ru8gq7359nqrhfe36ug.apps.googleusercontent.com";
 
   function parseJwt(token) {
     const base64Url = token.split('.')[1];
