--- a/GlobalAssessment/index.html
+++ b/GlobalAssessment/index.html
@@ -396,7 +396,7 @@
     <script>
       let timelineData = [];
 
-      fetch("data.json")
+      fetch("https://github.com/jin-zhao-teh/jin-zhao-teh.github.io/blob/main/GlobalAssessment/data.json")
         .then((response) => response.json())
         .then((data) => {
           timelineData = data.timelineData;
