--- a/GlobalAssessment/index.html
+++ b/GlobalAssessment/index.html
@@ -417,7 +417,7 @@
         let currentEvents = [];
 
         // Fetch data from data.json
-        fetch("https://github.com/jin-zhao-teh/jin-zhao-teh.github.io/blob/main/GlobalAssessment/data.json")
+        fetch("https://jin-zhao-teh.github.io/GlobalAssessment/data.json")
           .then((response) => response.json())
           .then((data) => {
             timelineData = data.timelineData;
