--- a/MathAssessment/index.html
+++ b/MathAssessment/index.html
@@ -277,7 +277,7 @@
                 <div class="graph">
                     <h3 class="graph-title">Internet Access Trends (2014-2024)</h3>
                     <div class="graph-container">
-                        <img src="/images/internet-trends.png" alt="Internet Access Trends 2014-2024" class="graph-image" onerror="this.style.display='none'; document.getElementById('trend-placeholder').style.display='flex';">
+                        <img src="/Images/internet-trends.png" alt="Internet Access Trends 2014-2024" class="graph-image" onerror="this.style.display='none'; document.getElementById('trend-placeholder').style.display='flex';">
                         <div id="trend-placeholder" class="graph-placeholder">
                             Image not found: /images/internet-trends.png
                         </div>
@@ -290,7 +290,7 @@
                 <div class="graph">
                     <h3 class="graph-title">Device Ownership Comparison</h3>
                     <div class="graph-container">
-                        <img src="/images/device-ownership.png" alt="Device Ownership Comparison" class="graph-image" onerror="this.style.display='none'; document.getElementById('device-placeholder').style.display='flex';">
+                        <img src="/Images/device-ownership.png" alt="Device Ownership Comparison" class="graph-image" onerror="this.style.display='none'; document.getElementById('device-placeholder').style.display='flex';">
                         <div id="device-placeholder" class="graph-placeholder">
                             Image not found: /images/device-ownership.png
                         </div>
@@ -358,7 +358,7 @@
                 <div class="graph">
                     <h3 class="graph-title">Social Media Usage</h3>
                     <div class="graph-container">
-                        <img src="/images/social-media.png" alt="Social Media Usage" class="graph-image" onerror="this.style.display='none'; document.getElementById('social-placeholder').style.display='flex';">
+                        <img src="/Images/social-media.png" alt="Social Media Usage" class="graph-image" onerror="this.style.display='none'; document.getElementById('social-placeholder').style.display='flex';">
                         <div id="social-placeholder" class="graph-placeholder">
                             Image not found: /images/social-media.png
                         </div>
