--- a/MathAssessment/index.html
+++ b/MathAssessment/index.html
@@ -279,7 +279,7 @@
                     <div class="graph-container">
                         <img src="/Images/internet-trends.png" alt="Internet Access Trends 2014-2024" class="graph-image" onerror="this.style.display='none'; document.getElementById('trend-placeholder').style.display='flex';">
                         <div id="trend-placeholder" class="graph-placeholder">
-                            Image not found: /images/internet-trends.png
+                            Image not found: /Images/internet-trends.png
                         </div>
                     </div>
                     <p class="analysis"><strong>Analysis:</strong> Niue shows consistently high internet access rates, largely due to its innovative .nu domain revenue funding free public WiFi. The Cook Islands demonstrate steady growth correlated with tourism development. Tokelau, while starting from a lower baseline, shows the most significant percentage growth, reflecting recent infrastructure investments.</p>
@@ -292,7 +292,7 @@
                     <div class="graph-container">
                         <img src="/Images/device-ownership.png" alt="Device Ownership Comparison" class="graph-image" onerror="this.style.display='none'; document.getElementById('device-placeholder').style.display='flex';">
                         <div id="device-placeholder" class="graph-placeholder">
-                            Image not found: /images/device-ownership.png
+                            Image not found: /Images/device-ownership.png
                         </div>
                     </div>
                     <p class="analysis"><strong>Analysis:</strong> Smartphones are the most common device across all three regions, reflecting the mobile-first nature of Pacific Island internet use. Laptop/computer ownership shows greater variation, with higher rates in Niue and Cook Islands where educational and tourism initiatives have promoted digital literacy.</p>
@@ -360,7 +360,7 @@
                     <div class="graph-container">
                         <img src="/Images/social-media.png" alt="Social Media Usage" class="graph-image" onerror="this.style.display='none'; document.getElementById('social-placeholder').style.display='flex';">
                         <div id="social-placeholder" class="graph-placeholder">
-                            Image not found: /images/social-media.png
+                            Image not found: /Images/social-media.png
                         </div>
                     </div>
                     <p>Percentage of population using social media platforms at least weekly. Facebook is the dominant platform across all three regions, followed by YouTube and Instagram.</p>
