--- a/MathAssessment/index.html
+++ b/MathAssessment/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Technology in the Pacific: A Comparative Analysis</title>
     <style>
+        
         * {
             margin: 0;
             padding: 0;
@@ -290,7 +291,7 @@
                 <div class="graph">
                     <h3 class="graph-title">Device Ownership Comparison</h3>
                     <div class="graph-container">
-                        <img src="https://jin-zhao-teh.github.io/MathAssessment/Images/device-ownership.png" alt="Device Ownership Comparison" class="graph-image" onerror="this.style.display='none'; document.getElementById('device-placeholder').style.display='flex';">
+                        <img src="https://raw.githubusercontent.com/jin-zhao-teh/jin-zhao-teh.github.io/main/MathAssessment/Images/device-ownership.png" alt="Device Ownership Comparison" class="graph-image" onerror="this.style.display='none'; document.getElementById('device-placeholder').style.display='flex';">
                         <div id="device-placeholder" class="graph-placeholder">
                             Image not found: https://jin-zhao-teh.github.io/MathAssessment/Images/device-ownership.png
                         </div>
