--- a/GlobalAssessment/index.html
+++ b/GlobalAssessment/index.html
@@ -587,6 +587,7 @@
               } else {
                 filter = "all"
               }
+              console.log(filter)
               generateTimelineEvents(filter);
             });
           });
