--- a/MathAssessment/index.html
+++ b/MathAssessment/index.html
@@ -303,7 +303,7 @@
             margin: 15px 0;
         }
         
-        .black {
+        .Black {
             text-color: black;
         }
         
