--- a/MathAssessment/index.html
+++ b/MathAssessment/index.html
@@ -304,7 +304,7 @@
         }
         
         .Black {
-            text-color: black;
+            color: black;
         }
         
         .methodology {
