--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://jin-zhao-teh.github.io/css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jin-Zhao Teh | Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +32,7 @@
     <div id="slider">
       <div class="slideX active" id="hero-page-w1">
         <div class="hero-background">
-          <img src="Images/Img1.webp" alt="Background Image 1" />
+          <img src="https://jin-zhao-teh.github.io/Images/Img1.webp" alt="Background Image 1" />
         </div>
         <div class="hero-content">
           <header class="Hero-text">Creative Developer & Designer</header>
@@ -42,7 +42,7 @@
       </div>
       <div class="slideX" id="hero-page-w2">
         <div class="hero-background">
-          <img src="Images/Img2.webp" alt="Background Image 2" />
+          <img src="https://jin-zhao-teh.github.io/Images/Img2.webp" alt="Background Image 2" />
         </div>
         <div class="hero-content">
           <header class="Hero-text">Innovative Solutions</header>
@@ -52,7 +52,7 @@
       </div>
       <div class="slideX" id="hero-page-w3">
         <div class="hero-background">
-          <img src="Images/Img3.webp" alt="Background Image 3" />
+          <img src="https://jin-zhao-teh.github.io/Images/Img3.webp" alt="Background Image 3" />
         </div>
         <div class="hero-content">
           <header class="Hero-text">Let's Collaborate</header>
@@ -83,7 +83,7 @@
         <div class="projects-grid">
           <div class="project-card">
             <div class="project-image">
-              <img src="Images/project1.webp" alt="Project 1">
+              <img src="https://jin-zhao-teh.github.io/Images/project1.webp" alt="Project 1">
               <div class="project-overlay">
                 <h3>E-commerce Platform</h3>
                 <p>Full-stack development with React & Node.js</p>
@@ -93,7 +93,7 @@
           </div>
           <div class="project-card">
             <div class="project-image">
-              <img src="Images/project2.webp" alt="Project 2">
+              <img src="https://jin-zhao-teh.github.io/Images/project2.webp" alt="Project 2">
               <div class="project-overlay">
                 <h3>Brand Identity</h3>
                 <p>Visual identity for tech startup</p>
@@ -103,7 +103,7 @@
           </div>
           <div class="project-card">
             <div class="project-image">
-              <img src="Images/project3.webp" alt="Project 3">
+              <img src="https://jin-zhao-teh.github.io/Images/project3.webp" alt="Project 3">
               <div class="project-overlay">
                 <h3>Mobile Application</h3>
                 <p>iOS & Android fitness tracking app</p>
@@ -113,7 +113,7 @@
           </div>
           <div class="project-card">
             <div class="project-image">
-              <img src="Images/project4.webp" alt="Project 4">
+              <img src="https://jin-zhao-teh.github.io/Images/project4.webp" alt="Project 4">
               <div class="project-overlay">
                 <h3>Data Visualization</h3>
                 <p>Interactive dashboard with D3.js</p>
@@ -148,7 +148,7 @@
             </div>
           </div>
           <div class="about-image">
-            <img src="Images/profile.webp" alt="Jin-Zhao Teh">
+            <img src="https://jin-zhao-teh.github.io/Images/profile.webp" alt="Jin-Zhao Teh">
           </div>
         </div>
       </div>
@@ -205,8 +205,8 @@
       </div>
     </footer>
 
-    <script src="js/hero-page-transition.js"></script>
-    <script src="js/links.js"></script>
+    <script src="https://jin-zhao-teh.github.io/js/js/hero-page-transition.js"></script>
+    <script src="https://jin-zhao-teh.github.io/js/js/links.js"></script>
     <script>
       // Mobile Navigation Toggle
       const navToggle = document.querySelector('.nav-toggle');
