Add style to iframe for English page

--- a/English/index.html
+++ b/English/index.html
@@ -1,9 +1,15 @@
 <html>
   <head>
     <title>English</title>
+    <style>
+      #EnglishWriting1 {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
     <p>this is text :)</p>
-    <iframe src="https://docs.google.com/document/d/1jSK0NVWWcgVm4e0IMqIZfuHQGG6l75tiepb1gdykwjc/edit?usp=sharing"></iframe>
+    <iframe id="EnglishWriting1" src="https://docs.google.com/document/d/1jSK0NVWWcgVm4e0IMqIZfuHQGG6l75tiepb1gdykwjc/edit?usp=sharing"></iframe>
   </body>
 </html>
