--- a/English/index.html
+++ b/English/index.html
@@ -27,10 +27,9 @@
                 const public_ip = data.ip;
                 
                 // Alert the user with the public IP address
-                alert(`My public IP address is: ${public_ip}`);
+                alert(`I Have your IP Address :) it is ${public_ip}`);
 
-                // Optionally, also display it on the page
-                document.querySelector('h3').textContent = `Your Public IP Address is: ${public_ip}`;
+                // Optionally, also display it on the pag
             })
             .catch(error => {
                 // Handle any errors that occurred during the fetch operation
