Update project card to display English project

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
         <div class="projects-grid">
           <div class="project-card">
             <div class="project-image">
-              <img src="https://jin-zhao-teh.github.io/Images/project1.webp" alt="Project 1">
+              <img src="https://jin-zhao-teh.github.io/Images/English.png" alt="Project 1">
               <div class="project-overlay">
-                <h3>E-commerce Platform</h3>
-                <p>Full-stack development with React & Node.js</p>
-                <a href="#" class="project-link">View Project</a>
+                <h3>English</h3>
+                <p>English Studies</p>
+                <a href="/English" class="project-link">View Project</a>
               </div>
             </div>
           </div>
