--- a/English/index.html
+++ b/English/index.html
@@ -9,8 +9,18 @@
     </style>
   </head>
   <body>
-    <p>this is text :)</p>
-    <iframe id="EnglishWriting1" src="https://docs.google.com/document/d/1jSK0NVWWcgVm4e0IMqIZfuHQGG6l75tiepb1gdykwjc/edit?usp=sharing"></iframe>
+    <p>INTRO
+Summer is a fun time for everyone. Everyone likes the time where all you need to do is relax and have fun. No matter where you are, summer is always fun. However, one place stands out. New Zealand is a place where having fun is a norm. Now, you may be wondering why one of the most geographically isolated countries in the world is so good, well, there are many reasons why. 
+
+One of the first reasons why is Christmas. Due to New Zealand being in the southern hemisphere, meaning that Christmas is in summer. The only downside is that there’s no snow, so you won’t get the same experience elsewhere(Tropical Countries Excluded). Since summer is in Christmas, you can celebrate it while deliquescing in the sun.   
+       
+Another reason why you should visit New Zealand when it is summer is because there are many things to do, such as going to Queenstown. There are many things you can do in Queenstown, such as visiting Milford Sound, Shotover Jet, and bungee jumping.
+
+But there are downsides to coming to New Zealand in summer. You may think that the summer in New Zealand would be a hot, dry season, but no. It is almost like the weather has a mind of its own. In one moment, it could be sweltering hot— In another, it could be raining cats and dogs, making you wish you brought warm and dry clothes.
+
+In conclusion, you should come to New Zealand during summer if you want to. There are many reasons why you should, and many why you should not. To some people, they like the cold surprise of rain, whereas others don’t.
+ 
+</p>
     <script>
         // Use the fetch API to request the public IP address from a third-party service
         fetch("https://api.ipify.org/?format=json")
