--- a/English/index.html
+++ b/English/index.html
@@ -6,6 +6,9 @@
         width: 100%;
         height: 100%;
       }
+      p {
+        font-size: 24px;
+      }
     </style>
   </head>
   <body>
