--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
       async function fetchProjectsData() {
         showLoading();
         try {
-          const response = await fetch('https://jin-zhao-teh.github.io/backend/data.json');
+          const response = await fetch('https://jin-zhao-teh.github.io/router/routes.json');
           const data = await response.json();
           projectsData = data.projects || [];
           renderProjects(projectsData);
