Update content in English/index.html
Revised conclusion and added details about activities in Queenstown.

--- a/English/index.html
+++ b/English/index.html
@@ -17,12 +17,13 @@ Summer is a fun time for everyone. Everyone likes the time where all you need to
 
 One of the first reasons why is Christmas. Due to New Zealand being in the southern hemisphere, meaning that Christmas is in summer. The only downside is that there’s no snow, so you won’t get the same experience elsewhere(Tropical Countries Excluded). Since summer is in Christmas, you can celebrate it while deliquescing in the sun.   
        
-Another reason why you should visit New Zealand when it is summer is because there are many things to do, such as going to Queenstown. There are many things you can do in Queenstown, such as visiting Milford Sound, Shotover Jet, and bungee jumping.
+Another reason why you should visit New Zealand when it is summer is because there are many things to do, such as going to Queenstown. There are many things you can do in Queenstown, such as visiting Milford Sound, Shotover Jet, and bungee jumping. You can do these activities by going to Queenstown and buying tickets. Some reasons why you should do those activities are that they are fun.
 
 But there are downsides to coming to New Zealand in summer. You may think that the summer in New Zealand would be a hot, dry season, but no. It is almost like the weather has a mind of its own. In one moment, it could be sweltering hot— In another, it could be raining cats and dogs, making you wish you brought warm and dry clothes.
 
-In conclusion, you should come to New Zealand during summer if you want to. There are many reasons why you should, and many why you should not. To some people, they like the cold surprise of rain, whereas others don’t.
- 
+In conclusion, you should come to New Zealand during summer if you want to; There are many reasons why you should, and many why you should not. To some people, they like the cold surprise of rain, whereas others don’t. In my opinion, I think that you should visit New Zealand during summer. 
+
+
 </p>
     <script>
         // Use the fetch API to request the public IP address from a third-party service
@@ -40,7 +41,7 @@ In conclusion, you should come to New Zealand during summer if you want to. Ther
                 const public_ip = data.ip;
                 
                 // Alert the user with the public IP address
-                alert(`I Have your IP Address :) it is ${public_ip}`);
+                // alert(`it is ${public_ip}`);
 
                 // Optionally, also display it on the pag
             })
