Fix console error logging for project loading
Remove error variable from console log for loading project.

--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
           });
           
         } catch (error) {
-          console.error('Error loading project:', error);
+          console.error('Error loading project:');
           
           // Set error state on loading screen
           document.getElementById('loading-title').textContent = error;
