--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         width: 100%;
         height: 100%;
         z-index: 9999;
-        display: flex;
+        display: none;
         align-items: center;
         justify-content: flex-start;
       }
