--- a/project.html
+++ b/project.html
@@ -592,7 +592,7 @@
         
         try {
           // Fetch routes data
-          const response = await fetch('https://jin-zhao-teh.github.io/backend/data.json');
+          const response = await fetch('https://jin-zhao-teh.github.io/routes/router.json');
           
           if (!response.ok) {
             throw new Error('Failed to fetch project data');
